src/App.css
#canvas-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.label {
  color: white;
  font-size: 32px;
  font-family: "Computer Modern Serif", serif;
  font-style: italic;
  padding: 2px;
  background-color: transparent;
}

.point-label {
  color: white;
  font-size: 24px;
  font-family: "Computer Modern Serif", serif;
  font-style: italic;
  padding: 2px;
  background-color: transparent;
}

